# frisby-global-tags-cabal-ghc

./: README.md  excerpt-of-dot-emacs-file  frisby-global-tags-cabal-ghc.cabal  gtags.el
exe-src/: Main.hs
src/: FrisbyGlobalTagsCabalGhc.hs  FrisbyGlobalTagsCabalGhcGhc.hs  FrisbyGlobalTagsCabalGhcIn.hs  FrisbyGlobalTagsCabalGhcOut.hs
